# savetheuniverse

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  video-outline.txt
savetheuniverse-client/: TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
savetheuniverse-client/public/: measuring_information_1.7z  measuring_information_2.7z  measuring_information_3.7z
savetheuniverse-client/src/: main.tsx  mdx.d.ts  style.css
savetheuniverse-client/src/cellgrid/: core.ts  load.ts  sim.ts  viz.ts
savetheuniverse-client/src/common/: canvas.ts  field.ts  grid-utils.tsx  imageToSDF.tsx  ticker.ts
savetheuniverse-client/src/particles/: TODO.md  boundary-image.ts  boundary.ts  collide.ts  core.ts  detect.ts  driver.ts  particles.ts  viz.ts
savetheuniverse-client/src/text/: Figure.tsx  Layout.tsx  ParticleSimulation.tsx  ParticleToy.tsx  text.mdx  (+1 more)
savetheuniverse-server/: CMakeLists.txt  Makefile  README.md  TODO.md  requirements.txt  stream_video.py  videotest.cpp  x.cu
savetheuniverse-server/include/: shader.hpp
savetheuniverse-server/include/glad/: glad.h
savetheuniverse-server/scripts/: run.sh
savetheuniverse-server/shaders/: draw.fs
savetheuniverse-server/src/: glad.c  http_server.py  interface.h  main.cpp  main.cu  renderer.cu  renderer.h  simulation.cu  simulation.h  util.h
src/: main.ts  main.tsx  style.css
src/cellgrid/: main.ts
src/common/: canvas.ts  field.ts  ticker.ts
src/model-lepton/: readme.txt
src/particles/: TODO.md  core.ts  detect.ts  driver.ts  viz.ts
(+25 files in other folders)
